--- a/blocks/breadcrumb/breadcrumb.css
+++ b/blocks/breadcrumb/breadcrumb.css
@@ -1,9 +1,8 @@
 .breadcrumb {
-    display: flex;
-    align-items: center;
+    padding: 1rem;
     font-size: 0.9rem;
-    font-weight: 300;
-    margin: 0.5rem 0 0 0.3rem;
 }
+
+
 
 
