--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -179,7 +179,6 @@ header nav[aria-expanded='true'] .nav-sections {
 
 header nav .nav-sections ul {
   list-style: none;
-  padding-left: 0;
   font-size: var(--body-font-size-s);
 }
 
@@ -239,7 +238,6 @@ header nav[aria-expanded='true'] .nav-sections {
   header nav .nav-sections ul {
     display: flex;
     gap: 24px;
-    margin: 0;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li {
@@ -253,20 +251,17 @@ header nav[aria-expanded='true'] .nav-sections {
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
-    display: block;
+    display: flex;
+    justify-content: center;
     position: absolute;
-    left: -24px;
-    width: 200px;
     top: 150%;
     padding: 16px;
-    background-color: var(--light-color);
-    white-space: initial;
+    background-color: var(--background-color);
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
     content: '';
     position: absolute;
-    top: -8px;
     left: 16px;
     width: 0;
     height: 0;
