--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,7 @@ main > .section {
 main > .section > div {
   max-width: 1200px;
   margin: auto;
-  padding: 0 24px;
+  padding: 20px 34px;
 }
 
 main > .section:first-of-type {
@@ -240,6 +240,6 @@ main > .section:first-of-type {
 
 @media (width >= 900px) {
   main > .section > div {
-    padding: 0 32px;
+    padding: 20px 32px;
   }
 }
