--- a/blocks/info-banner/info-banner.css
+++ b/blocks/info-banner/info-banner.css
@@ -1,61 +1,60 @@
+/* Base mobile styles (below 360px) */
 .info-banner {
     display: flex;
     flex-direction: column;
-    max-width: 1200px;
-    margin: 21px auto;
 }
 
 .info-banner > div {
     display: flex;
     flex-direction: column-reverse;
 }
+
 .info-banner.feature-card > div {
     flex-direction: column;
-}
-.info-banner > div > div:first-child img {
-    width: 100%;
-    height: auto;
 }
 
 .info-banner > div > div:last-child {
     text-align: center;
-    width: 80%;
-    margin: 0 auto;
+    width: 90%;
+    margin: auto;
 }
+
 .info-banner.feature-card > div > div:last-child {
     background-color: rgb(27, 37, 44);
-    padding: 2rem;
+    padding: 1.2rem;
 }
 
 .info-banner h1 {
     font-family: var(--heading-font-family);
     font-weight: var(--font-weight-light);
     font-style: var(--font-style-normal);
-    font-size: 1.95rem;
-    margin-bottom: 1.1rem;
+    font-size: 1.4rem;
+    margin-bottom: 0.8rem;
     font-weight: 400;
     line-height: 1.2;
 }
 
 .info-banner h2 {
     font-family: var(--body-font-family);
-    font-size: 2.5rem;
-    margin: 0 0 0 0rem;
+    font-size: 1.8rem;
+    margin: 0;
     line-height: 1.2;
     font-weight: 300;
 }
 
 .info-banner h2:last-of-type {
-    font-size: 1.35rem;
-    margin-top: 1rem;
+    font-size: 1rem;
+    margin-top: 0.8rem;
     font-weight: 400;
 }
+
 .info-banner p {
     font-family: var(--body-font-family);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 400;
     line-height: 1.5;
 }
+
 .info-banner.feature-card > div > div {
     color: #ffffff;
 }
@@ -64,8 +63,62 @@
     text-decoration: underline;
     word-break: break-word;
     background-color: transparent;
+    font-size: 0.9rem;
 }
 
+/* Mobile styles (360px and up) */
+@media (width >= 360px) {
+    .info-banner {
+        margin: 1.5rem;
+    }
+
+    .info-banner.feature-card > div > div:last-child {
+        width: 85%;
+    }
+
+    .info-banner h1 {
+        font-size: 1.6rem;
+    }
+
+    .info-banner h2:last-of-type {
+        font-size: 1.15rem;
+    }
+
+    .info-banner p {
+        font-size: 0.85rem;
+    }
+
+    .info-banner a.button {
+        font-size: 0.95rem;
+    }
+}
+
+/* Tablet styles (600px and up) */
+@media (width >= 600px) {
+    .info-banner {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    .info-banner.feature-card > div > div:last-child {
+        width: 94%;
+    }
+
+    .info-banner h1 {
+        font-size: 2.8rem;
+    }
+
+    .info-banner h2:last-of-type {
+        font-size: 2.25rem;
+    }
+
+    .info-banner p {
+        font-size: 1.3rem;
+    }
+    .info-banner a.button {
+        font-size: 1rem;
+    }
+}
 
 @media (width >= 900px) {
     .info-banner {
@@ -82,10 +135,11 @@
         flex-direction: row;
         gap: 0;
     }
+
     .info-banner > div > div:first-child {
         flex: 1.5;
-
     }
+
     .info-banner.feature-card > div > div:first-child {
         flex: 5;
     }
@@ -99,6 +153,7 @@
         font-weight: 300;
         line-height: 1.25;
     }
+
     .info-banner.feature-card h1 {
         font-size: 4.35rem;
     }
@@ -106,6 +161,7 @@
     .info-banner h2:last-of-type {
         font-size: 2.125rem;
     }
+
     .info-banner.feature-card h2:last-of-type {
         font-size: 1.125rem;
     }
