--- a/blocks/product-showcase/product-showcase.css
+++ b/blocks/product-showcase/product-showcase.css
@@ -9,7 +9,7 @@ h1#top-sellers {
 }
 
 .product-card {
-    padding: 1rem;
+    padding: 0.8rem;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -30,14 +30,14 @@ h1#top-sellers {
 }
 
 .product-title {
-    font-size: var(--product-title-font-size);
+    font-size: 1rem;
     font-weight: normal;
     color: rgb(27, 37, 44);
 }
 
 .product-price {
-    margin-bottom: 1rem;
-    font-size: var(--product-price-font-size);
+    margin-bottom: 0.8rem;
+    font-size: 0.9rem;
     font-weight: bold;
     color: rgb(27, 37, 44);
 }
@@ -49,17 +49,19 @@ h1#top-sellers {
 }
 
 .add-to-cart {
-    padding: 0.5rem 2.9rem;
+    padding: 0.35rem 0.6rem;
     background: rgb(41, 84, 255);
     color: white;
-    font-size: var(--product-button-font-size);
+    font-size: 0.9rem;
 }
+
 .add-to-cart:hover {
     background: rgb(126, 201, 255);
 }
+
 .heart-icon {
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 18px;
     cursor: pointer;
     color: rgb(27, 37, 44);
 }
@@ -79,10 +81,10 @@ h1#top-sellers {
 }
 
 .custom-slick-dots li {
-    display:flex;
-    width: 15px;
-    height: 15px;
-    margin: 0 6px;
+    display: flex;
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
     position: relative;
 }
 
@@ -92,8 +94,8 @@ h1#top-sellers {
 
 .custom-slick-dots li button:before {
     content: '';
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
     background-color: #999;
     position: absolute;
@@ -106,39 +108,74 @@ h1#top-sellers {
 }
 
 
-@media (max-width: 1024px) {
-    .add-to-cart {
-        padding: 0.5rem 1rem;
-    }
-}
+@media (width >= 360px) {
 
-@media (max-width: 768px) {
-    h1#top-sellers {
-        margin: 1.5rem 0 2rem;
-        font-size: var(--product-heading-mobile-font-size);
+
+    .product-card {
+        padding: 1rem;
     }
 
     .product-title {
-        font-size: var(--product-title-mobile-font-size);
+        font-size: 1.1rem;
     }
 
     .product-price {
-        font-size: var(--product-price-mobile-font-size);
+        font-size: 1rem;
+        margin-bottom: 1rem;
     }
 
     .add-to-cart {
-        padding: 0.4rem 0.75rem;
-        font-size: var(--product-button-mobile-font-size);
+        padding: 0.3rem 0.5rem;
     }
 
     .heart-icon {
-        width: 20px;
-        height: 20px;
+        width: 17px;
+        height: 17px;
     }
 }
 
-@media (max-width: 480px) {
+
+@media (width >= 600px) {
+
+    .product-title {
+        font-size: 1.2rem;
+    }
+
+    .product-price {
+        font-size: 1.1rem;
+    }
+
     .add-to-cart {
-        padding: 0.35rem 0.6rem;
+        padding: 0.55rem 2.5rem;
+    }
+
+    .heart-icon {
+        width: 22px;
+        height: 22px;
     }
 }
+
+@media (width >= 900px) {
+    .product-showcase-heading {
+        margin: 2rem 0 4rem;
+        font-size: 2.5rem;
+    }
+
+    .product-title {
+        font-size: 1.3rem;
+    }
+
+    .product-price {
+        font-size: 1.2rem;
+    }
+
+    .add-to-cart {
+        padding: 0.5rem 2.9rem;
+    }
+
+    .heart-icon {
+        width: 24px;
+        height: 24px;
+    }
+}
+
