--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,3 @@
-/* Mobile-first base styles */
 footer {
   background-color: var(--background-color);
   font-size: var(--body-font-size-xs);
@@ -6,66 +5,32 @@ footer {
 
 footer .footer > div {
   border-top: 1px solid #c4c4c4;
-  padding: 32px 16px 16px;
 }
 
-/* Main footer list styling */
 footer ul {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   font-weight: 600;
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-/* Main list items */
-footer > div > div > ul > li {
-  font-weight: bold;
-  margin-bottom: 12px;
-}
-
-/* Nested lists */
-footer ul ul {
-  margin: 12px 0 0 0;
-}
-
-/* Nested list items */
 footer ul ul li {
   font-weight: 400;
-  margin-bottom: 5px;
   color: var(--text-color, #666);
 }
 
-/* Social icons */
-footer .icon {
-  display: inline-block;
-  margin-right: 12px;
-}
-
-footer .icon img {
-  width: 20px;
-  height: 20px;
-}
-
-/* Newsletter input */
 .footer-subscribe-input {
-  width: 85%;
-  padding: 8px 12px;
   border: 1px solid var(--text-color, #666);
   border-radius: 4px;
 }
 
-/* Logo and copyright section */
 footer .footer ul > li:has(.icon-VeniaLogo) {
   grid-column: 1 / -1;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  gap: 20px;
-  margin-top: 24px;
-  padding-top: 24px;
   border-top: 1px solid #c4c4c4;
 }
 
@@ -78,11 +43,35 @@ footer .footer ul > li:has(.icon-VeniaLogo) ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
   margin-top: 0;
 }
 
-/* Desktop styles */
+@media (width >= 360px) {
+  footer .footer > div {
+    padding: 28px 18px 18px;
+  }
+
+  footer ul {
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  }
+
+  footer ul ul li {
+    margin-bottom: 6px;
+  }
+
+  footer .footer ul > li:has(.icon-VeniaLogo) {
+    margin-top: 26px;
+    padding-top: 26px;
+  }
+}
+
+@media (width >= 600px) {
+  footer .footer ul > li:has(.icon-VeniaLogo) {
+    margin-top: 28px;
+    padding-top: 28px;
+  }
+}
+
 @media (width >= 900px) {
   footer .footer > div {
     border-top: 1px solid #c4c4c4;
@@ -97,11 +86,6 @@ footer .footer ul > li:has(.icon-VeniaLogo) ul {
 
   footer .icon {
     margin-right: 16px;
-  }
-
-  footer .icon img {
-    width: 24px;
-    height: 24px;
   }
 
   .footer-subscribe-input {
