--- a/blocks/hero-banner/hero-banner.css
+++ b/blocks/hero-banner/hero-banner.css
@@ -64,14 +64,14 @@
 }
 
 .hero-slide-text h1 {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
+  font-size: var(--heading-font-size-l);
+  margin-bottom: var(--gap-small);
   font-weight: 100;
   color: var(--text-color);
 }
 
 .hero-slide-text p {
-  font-size: 0.9rem;
+  font-size: var(--body-font-size-xs);
   margin-bottom: 1.5rem;
   color: var(--text-color);
 }
@@ -139,13 +139,13 @@
   }
 
   .hero-slide-text h1 {
-    font-size: 1.6rem;
-    margin-bottom: 1rem;
+    font-size: var(--heading-font-size-xl);
+    margin-bottom: var(--gap-medium);
   }
 
   .hero-slide-text p {
-    font-size: 0.9rem;
-    margin-bottom: 1.2rem;
+    font-size: var(--body-font-size-s);
+    margin-bottom: var(--gap-large);
   }
 
   .hero-slide-text a.button:any-link {
@@ -168,11 +168,11 @@
   }
 
   .hero-slide-text h1 {
-    font-size: 3.5rem;
+    font-size: var(--heading-font-size-xxl);
     font-weight: 100;
   }
 
   .hero-slide-text p {
-    font-size: 1rem;
+    font-size: var(--body-font-size-m);
   }
 }
