--- a/blocks/product-showcase/product-showcase.css
+++ b/blocks/product-showcase/product-showcase.css
@@ -1,15 +1,14 @@
-
 h1#top-sellers {
     margin: 2rem 0 4rem;
     font-size: var(--product-heading-font-size);
     font-weight: 100;
-    color: rgb(27, 37, 44);
+    color: var(--text-color);
     display: flex;
     justify-content: center;
 }
 
 .product-card {
-    padding: 0.8rem;
+    padding: var(--gap-small);
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -30,16 +29,16 @@ h1#top-sellers {
 }
 
 .product-title {
-    font-size: 1rem;
+    font-size: var(--product-title-font-size);
     font-weight: normal;
-    color: rgb(27, 37, 44);
+    color: var(--text-color);
 }
 
 .product-price {
-    margin-bottom: 0.8rem;
-    font-size: 0.9rem;
+    margin-bottom: var(--gap-small);
+    font-size: var(--product-price-font-size);
     font-weight: bold;
-    color: rgb(27, 37, 44);
+    color: var(--text-color);
 }
 
 .product-actions {
@@ -50,24 +49,24 @@ h1#top-sellers {
 
 .add-to-cart {
     padding: 0.35rem 0.6rem;
-    background: rgb(41, 84, 255);
-    color: white;
-    font-size: 0.9rem;
+    background: var(--link-color);
+    color: var(--button-text);
+    font-size: var(--product-button-font-size);
 }
 
 .add-to-cart:hover {
-    background: rgb(126, 201, 255);
+    background: var(--link-hover-color);
 }
 
 .heart-icon {
-    width: 18px;
-    height: 18px;
+    width: var(--control-size-small);
+    height: var(--control-size-small);
     cursor: pointer;
-    color: rgb(27, 37, 44);
+    color: var(--text-color);
 }
 
 .heart-icon:hover {
-    color: #ff4d4d;
+    color: var(--link-hover-color);
 }
 
 .custom-slick-dots {
@@ -107,36 +106,26 @@ h1#top-sellers {
     background-color: rgb(24, 24, 25);
 }
 
-
 @media (width >= 360px) {
-
-
     .product-card {
-        padding: 1rem;
+        padding: var(--gap-medium);
     }
 
     .product-title {
-        font-size: 1.1rem;
+        font-size: var(--product-title-mobile-font-size);
     }
 
     .product-price {
-        font-size: 1rem;
-        margin-bottom: 1rem;
+        font-size: var(--product-price-mobile-font-size);
+        margin-bottom: var(--gap-medium);
     }
 
     .add-to-cart {
-        padding: 0.3rem 0.5rem;
-    }
-
-    .heart-icon {
-        width: 17px;
-        height: 17px;
+        font-size: var(--product-button-mobile-font-size);
     }
 }
 
-
 @media (width >= 600px) {
-
     .product-title {
         font-size: 1.2rem;
     }
@@ -158,15 +147,15 @@ h1#top-sellers {
 @media (width >= 900px) {
     .product-showcase-heading {
         margin: 2rem 0 4rem;
-        font-size: 2.5rem;
+        font-size: var(--heading-font-size-xl);
     }
 
     .product-title {
-        font-size: 1.3rem;
+        font-size: var(--heading-font-size-xs);
     }
 
     .product-price {
-        font-size: 1.2rem;
+        font-size: var(--heading-font-size-xs);
     }
 
     .add-to-cart {
